Crash in [@ RtlAcquireSRWLockExclusive | mozilla::dom::GamepadPlatformService::RemoveChannelParentInternal]
Categories
(Core :: DOM: Device Interfaces, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox83 | --- | unaffected |
| firefox84 | --- | unaffected |
| firefox85 | --- | fixed |
| firefox86 | --- | fixed |
People
(Reporter: aryx, Assigned: cmartin)
References
(Regression)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
The crash signature existed before but got more frequent
Crash report: https://crash-stats.mozilla.org/report/index/a793e89d-481b-4880-91b5-691f30201210
Reason: EXCEPTION_ACCESS_VIOLATION_WRITE
Top 10 frames of crashing thread:
0 ntdll.dll RtlAcquireSRWLockExclusive
1 xul.dll mozilla::dom::GamepadPlatformService::RemoveChannelParentInternal dom/gamepad/GamepadPlatformService.cpp:280
2 xul.dll static mozilla::dom::GamepadPlatformService::RemoveChannelParent dom/gamepad/GamepadPlatformService.cpp:325
3 xul.dll mozilla::ipc::IProtocol::DestroySubtree ipc/glue/ProtocolUtils.cpp:603
4 xul.dll mozilla::dom::PGamepadEventChannelParent::OnMessageReceived ipc/ipdl/PGamepadEventChannelParent.cpp:160
5 xul.dll mozilla::ipc::PBackgroundParent::OnMessageReceived ipc/ipdl/PBackgroundParent.cpp:3717
6 xul.dll mozilla::ipc::MessageChannel::DispatchMessage ipc/glue/MessageChannel.cpp:2077
7 xul.dll nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1200
8 xul.dll mozilla::ipc::MessagePumpForNonMainThreads::Run ipc/glue/MessagePump.cpp:332
9 xul.dll MessageLoop::RunHandler ipc/chromium/src/base/message_loop.cc:327
| Assignee | ||
Comment 2•5 years ago
|
||
This one is... less expected than the other one (the gamepad cleanup was made in-part to catch bugs like the one it did).
I'll look into this one too. Thanks, Sebastian.
Updated•5 years ago
|
| Assignee | ||
Comment 3•5 years ago
|
||
The most likely cause for the crashes seems like IPDL intermittently calling GamepadEventChannelParent::ActorDestroy() multiple times on the same object.
This adds a wrapper to stop that behavior (if it's the root cause), and also to fire off release assertions at several other potential causes.
Hopefully we see this crash signature disappear.
Comment 5•5 years ago
|
||
| bugherder | ||
Updated•5 years ago
|
Comment 6•5 years ago
|
||
Should be fixed in beta by backout
https://hg.mozilla.org/releases/mozilla-beta/rev/0f0e8d040ea71e2ab86e80215fc0e9a7275d1e2a
Updated•5 years ago
|
Description
•